# Relic

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  INSTALL.md  README.md  install.py  pyproject.toml
.github/workflows/: ci.yml
demo/: config.example.env
demo/expected_outputs/: model_profile.md
docs/: ADAPTERS.md  CONFIGURATION.md  PAPERCLIP_SETUP.md  PUBLIC_RUNTIME.md
docs/adr/: 001-layer4-artifact-gate.md  002-bridge-contract-v1.md  003-relic-core-scaffold.md
docs/architecture/: COMPANION_CONTRACT.md  COMPANION_OPERATING_MODEL.md  RELIC.md
hooks/relic-bootstrap/: HOOK.md  handler.ts
hooks/relic-capture/: HOOK.md  handler.ts
hooks/shared/: artifact-gate.ts  last-message.ts  smelt-retrieval.ts
scripts/: artifact_gate_check.py  build_static_demo.py  checkin_crontab_switch.py  export_shadow_artifacts.py  rd_scan.py  reproduce_evaluation.py  setup_paperclip.py  shadow_compare.py  shadow_run.py  sync_canonical_state.py
scripts/migration/: checkin_crontab_switch.py  daily_migration_report.py  historical_backfill.py  live_owner_switch.py  shadow_compare.py  shadow_run.py
src/lib/: __init__.py  config.py  hermes_client.py  llm_resilience.py  log.py  memory_context.py  memory_provider.py  openclaw_client.py  provider_llm_client.py  relic_debate.py  reviewer_workspace.py  runtime_client.py  telegram_notify.py
src/mnemon/: __init__.py  appraisal.py  attachment.py  backfill.py  biofeedback.py  biofeedback_correlation.py  biofeedback_gadgetbridge.py  biofeedback_gb_ingest.py  budget_bridge.py  caps.py  checkin.py  checkin_followup.py  constructs.py  daily_stress.py  decisions.py  defenses.py  demo_runner.py  domain_prober.py  dual_process.py  entity_extract.py  extract.py  goals.py  health_monitor.py  healthcheck.py  idiolect.py  (+49 more)
tests/: test_amber_integration.py  test_artifact_gate.py  test_artifact_gate_check_script.py  test_biofeedback_correlation.py  test_contested_handler.py  test_demo_runner.py  test_demo_webui.py  test_docs_sanitization_markers.py  test_health_monitor.py  test_hook_sanitization_markers.py  test_humanness_analyst.py  test_inbox_util.py  test_language_category_coverage.py  test_memory_context.py  test_no_legacy_facet_count.py  test_override_store.py  test_packaging_scaffold.py  test_portrait_language_visibility.py  test_provider_policy.py  test_python_depersonalization_markers.py  test_python_sanitization_markers.py  test_relic_brand_compat.py  test_relic_core_scaffold.py  test_relic_debate.py  test_relic_healthcheck.py  test_relic_hermes_adapter_scaffold.py  test_reply_extractor_context.py  test_repo_readiness.py  test_reproduce_evaluation.py  test_reviewer_workspace.py  test_webui_amber.py  test_webui_memory_provider.py
(+114 files in other folders)
