[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relic-mnemon"
version = "0.9.0"
description = "Longitudinal computational personality modeling from naturalistic digital trace data and wearable biofeedback."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
authors = [
  { name = "Martian Engineering" }
]
dependencies = []

[project.optional-dependencies]
webui = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
]
anthropic = [
  "anthropic>=0.20",
]
openai = [
  "openai>=1.0",
]
all-providers = [
  "anthropic>=0.20",
  "openai>=1.0",
]
keywords = ["agents", "personality-modeling", "reflective-systems", "demo"]

[project.urls]
Homepage = "https://github.com/yuzushi-dev/relic"
Documentation = "https://github.com/yuzushi-dev/relic/tree/main/docs"

[project.scripts]
mnemon-demo = "mnemon.demo_runner:main"
mnemon-demo-ui = "mnemon.demo_webui:main"
mnemon-webui = "mnemon.webui:main"
mnemon-checkin = "mnemon.checkin:main"
mnemon-checkin-followup = "mnemon.checkin_followup:main"
mnemon-healthcheck = "mnemon.healthcheck:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
